[package]
name = "ckb-stable-rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { path = "deps/ckb-std", default-features = false, features = ["allocator", "ckb-types"]}
buddy-alloc = { version = "0.5.0"}
bytes = { version = "1.4.0", default-features = false }

[profile.release]
overflow-checks = true
opt-level = 3
panic = 'abort'
strip = true
lto = true

[profile.dev]
strip = true
opt-level = 1
debug = false
panic = 'abort'
